unpackaged/main/default/objects/ETT_Collection_Card__c/ETT_Collection_Card__c.object-meta.xml
<CustomObject>
    <description>This object is to track the vehicle information and as well as driver information with the help of google map.</description>
    <label>Collection Card</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Collection Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>