unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Collection_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Collection_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Appointment</label>
    <referenceTo>Tyre_Collection_Appointment__c</referenceTo>
    <relationshipLabel>Collection Cards</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>