unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <formula>Collection_Appointment__r.Driver__r.FirstName+&#39; &#39;+Collection_Appointment__r.Driver__r.LastName+&#39; &#39;+ Collection_Appointment__r.Driver__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>