unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <formula>ETT_Service_Appointment__r.Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>