unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Accounts__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection Cards</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>