unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_All_Tyre_Rejected__c.field-meta.xml
<CustomField>
    <fullName>ETT_All_Tyre_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Tyre Rejected</label>
    <type>Checkbox</type>
</CustomField>