unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_CCL_Count__c.field-meta.xml
<CustomField>
    <fullName>ETT_CCL_Count__c</fullName>
    <label>CCL Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>