unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_CCL_Created__c.field-meta.xml
<CustomField>
    <fullName>ETT_CCL_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCL Created</label>
    <type>Checkbox</type>
</CustomField>