unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>ETT_Check_Out__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Out</label>
    <type>DateTime</type>
</CustomField>