unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>