unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Collection_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Line_Item_Count__c</fullName>
    <formula>ETT_Work_Order__r.LineItemCount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Line Item Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>