unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Status__c</fullName>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Inspection Cards Created</fullName>
            </value>
            <value>
                <fullName>Inspection Completed</fullName>
            </value>
            <value>
                <fullName>Job Card Created</fullName>
            </value>
            <value>
                <fullName>Check and Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>