unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Collection_Team_Submitted__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Team_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Card Submitted</label>
    <type>Checkbox</type>
</CustomField>