unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Completed__c.field-meta.xml
<CustomField>
    <fullName>ETT_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>