unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Contact__c.field-meta.xml
<CustomField>
    <fullName>ETT_Contact__c</fullName>
    <formula>ETT_Service_Appointment__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person Name</label>
    <type>Text</type>
</CustomField>