unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Country__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Collection Cards</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>