unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Create_Job_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Create_Job_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Job Card</label>
    <type>Checkbox</type>
</CustomField>