unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Driver__c.field-meta.xml
<CustomField>
    <fullName>ETT_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Collection Cards (Driver)</relationshipLabel>
    <relationshipName>Collection_Cards1</relationshipName>
    <type>Lookup</type>
</CustomField>