unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Estimation_Completed_By_Fm__c.field-meta.xml
<CustomField>
    <fullName>ETT_Estimation_Completed_By_Fm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimation Completed By FM</label>
    <type>Checkbox</type>
</CustomField>