unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Factory_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>ETT_Factory_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factory Manager Approved</label>
    <type>Checkbox</type>
</CustomField>