unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Inspection_Done__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspection_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Done</label>
    <type>Checkbox</type>
</CustomField>