unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Inspector__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Collection Cards (Inspector)</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>