unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>