unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Job_Card_Done__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Card_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Card Done</label>
    <type>Checkbox</type>
</CustomField>