unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Location__c.field-meta.xml
<CustomField>
    <fullName>ETT_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>