unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ETT_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Collection Cards</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>