unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Phone__c.field-meta.xml
<CustomField>
    <fullName>ETT_Phone__c</fullName>
    <formula>ETT_Accounts__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>