unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Receptionist_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>ETT_Receptionist_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receptionist Acceptance</label>
    <type>Checkbox</type>
</CustomField>