unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rejection_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Reason</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>