unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Service_Appointment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Service_Appointment_End_Date__c</fullName>
    <formula>ETT_Service_Appointment__r.SchedEndTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment End Date</label>
    <type>DateTime</type>
</CustomField>