unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection Stage</fullName>
            </value>
            <value>
                <fullName>Inspection Stage</fullName>
            </value>
            <value>
                <fullName>Job Card Stage</fullName>
            </value>
            <value>
                <fullName>Delivery Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>