unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Submitted_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>ETT_Submitted_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted For Approval</label>
    <type>Checkbox</type>
</CustomField>