unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_VAT_TRN_No_c__c.field-meta.xml
<CustomField>
    <fullName>ETT_VAT_TRN_No_c__c</fullName>
    <formula>ETT_Accounts__r.ETT_VAT_TRN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRN</label>
    <type>Text</type>
</CustomField>