unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Vehicle_Detail__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Detail</label>
    <referenceTo>ETT_Vehicle_Details__c</referenceTo>
    <relationshipLabel>Collection Cards</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>