unpackaged/main/default/objects/ETT_Collection_Card__c/fields/ETT_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>ETT_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Collection Request</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Collection Cards</relationshipLabel>
    <relationshipName>Collection_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>