unpackaged/main/default/objects/ETT_Collection_Card__c/fields/HasTyresWithoutPrice__c.field-meta.xml
<CustomField>
    <fullName>HasTyresWithoutPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tyres Without Price</label>
    <type>Checkbox</type>
</CustomField>