unpackaged/main/default/objects/ETT_Collection_Card__c/fields/No_of_Tyres__c.field-meta.xml
<CustomField>
    <fullName>No_of_Tyres__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Tyres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>