unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Number_of_Tyre__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tyre__c</fullName>
    <formula>TEXT(ETT_Work_Order__r.ETT_Number_Of_Tyres__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Tyre</label>
    <type>Text</type>
</CustomField>