unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Skiving_on_GSO_sticker_area__c.field-meta.xml
<CustomField>
    <fullName>Skiving_on_GSO_sticker_area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skiving on GSO sticker area</label>
    <type>Checkbox</type>
</CustomField>