unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <formula>ETT_Service_Appointment__r.Contact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Contact</label>
    <type>Text</type>
</CustomField>