unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <formula>ETT_Service_Appointment__r.Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Number</label>
    <type>Text</type>
</CustomField>