unpackaged/main/default/objects/ETT_Collection_Card__c/fields/Tyre_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Request_Number__c</fullName>
    <formula>ETT_Work_Order__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Request Number</label>
    <type>Text</type>
</CustomField>