unpackaged/main/default/objects/ETT_Collection_Card__c/fields/WOLI_Status__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Status__c</fullName>
    <label>WOLI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>