unpackaged/main/default/objects/ETT_Collection_Card__c/recordTypes/ETT_Tyre_Credit_B2B_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Credit_B2B_Supplier</fullName>
    <active>true</active>
    <label>Tyre - Credit/B2B Supplier</label>
</RecordType>