unpackaged/main/default/objects/ETT_Collection_Card__c/recordTypes/ETT_Tyre_Internal.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Internal</fullName>
    <active>true</active>
    <label>Tyre - Internal</label>
</RecordType>