unpackaged/main/default/objects/ETT_Collection_Card__c/recordTypes/Tyre_Internal_Private.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Internal_Private</fullName>
    <active>true</active>
    <label>Tyre - Internal Private</label>
</RecordType>