unpackaged/main/default/objects/ETT_Collection_Card__c/recordTypes/Tyre_Rejection_Process.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Rejection_Process</fullName>
    <active>true</active>
    <label>Tyre - Rejection Process</label>
</RecordType>