unpackaged/main/default/objects/ETT_Collection_Card__c/validationRules/ETT_Remarks_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Remarks_Needed</fullName>
    <active>true</active>
    <description>If &quot;All Tyres Rejected&quot; is checked then remarks field should be mandatory.</description>
    <errorConditionFormula>AND(ETT_All_Tyre_Rejected__c = True ,
ISBLANK( ETT_Remarks__c ), $Setup.ETT_Validation_Setting__c.ETT_Collection_Card_Remark_Needed__c )</errorConditionFormula>
    <errorMessage>Please enter the remarks.</errorMessage>
</ValidationRule>