unpackaged/main/default/objects/ETT_Collection_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Accounts__c</columns>
    <columns>Collection_Appointment__c</columns>
    <columns>ETT_Collection_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>