unpackaged/main/default/objects/ETT_Collection_Card__c/listViews/Tyre_Cash_Supplier.listView-meta.xml
<ListView>
    <fullName>Tyre_Cash_Supplier</fullName>
    <columns>NAME</columns>
    <columns>ETT_Account__c</columns>
    <columns>ETT_Check_In__c</columns>
    <columns>ETT_Check_Out__c</columns>
    <columns>ETT_Collection_Date__c</columns>
    <columns>ETT_Collection_Status__c</columns>
    <columns>ETT_Create_Job_Card__c</columns>
    <columns>ETT_All_Tyre_Rejected__c</columns>
    <columns>ETT_CCL_Created__c</columns>
    <columns>Number_of_Tyre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETT_Collection_Card__c.ETT_Tyre_Cash_Supplier</value>
    </filters>
    <label>Tyre - Cash Supplier</label>
</ListView>