unpackaged/main/default/objects/ETT_Collection_Card__c/listViews/Tyre_Rejection.listView-meta.xml
<ListView>
    <fullName>Tyre_Rejection</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETT_Collection_Card__c.Tyre_Rejection_Process</value>
    </filters>
    <label>Tyre - Rejection</label>
</ListView>